[gd_scene load_steps=4 format=3 uid="uid://main"]
[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]
[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="World" type="Node2D" parent="."]
]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
canvas_layer = 1

[node name="CanvasLayer/HUD" type="Control" parent="CanvasLayer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CanvasLayer/HUD/ScoreLabel" type="Label" parent="CanvasLayer/HUD"]
anchor_left = 0.02
anchor_top = 0.02
text = "Score: 0"
theme_override_fonts/font_size = 20

[node name="CanvasLayer/HUD/HighScoreLabel" type="Label" parent="CanvasLayer/HUD"]
anchor_right = 0.98
anchor_top = 0.02
anchor_left = 0.6
text = "Best: 0"
align = 2
theme_override_fonts/font_size = 20

[node name="CanvasLayer/HUD/AccuracyLabel" type="Label" parent="CanvasLayer/HUD"]
anchor_left = 0.02
anchor_top = 0.08
text = "Accuracy: 0%"
theme_override_fonts/font_size = 18

[node name="CanvasLayer/HUD/HealthLabel" type="Label" parent="CanvasLayer/HUD"]
anchor_left = 0.02
anchor_top = 0.12
text = "Health: 3"
theme_override_fonts/font_size = 18

[node name="CanvasLayer/HUD/Crosshair" type="Sprite2D" parent="CanvasLayer/HUD"]
texture = null
region_rect = Rect2(0,0,32,32)
]